tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__plot3d__field_plots__array_plot_basic.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"ArrayPlot[{{0, 0.5, 1}, {1, 0.5, 0}, {0.5, 1, 0.5}}]\")"
---
<svg width="360" height="360" viewBox="0 0 3600 3600" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<rect x="0" y="0" width="3600" height="3600" opacity="1" fill="#FFFFFF" stroke="none"/>
<rect x="0" y="0" width="1200" height="1200" opacity="1" fill="#000000" stroke="none"/>
<rect x="1200" y="0" width="1200" height="1200" opacity="1" fill="#FA730D" stroke="none"/>
<rect x="2400" y="0" width="1200" height="1200" opacity="1" fill="#FFE99E" stroke="none"/>
<rect x="0" y="1200" width="1200" height="1200" opacity="1" fill="#FFE99E" stroke="none"/>
<rect x="1200" y="1200" width="1200" height="1200" opacity="1" fill="#FA730D" stroke="none"/>
<rect x="2400" y="1200" width="1200" height="1200" opacity="1" fill="#000000" stroke="none"/>
<rect x="0" y="2400" width="1200" height="1200" opacity="1" fill="#FA730D" stroke="none"/>
<rect x="1200" y="2400" width="1200" height="1200" opacity="1" fill="#FFE99E" stroke="none"/>
<rect x="2400" y="2400" width="1200" height="1200" opacity="1" fill="#FA730D" stroke="none"/>
<rect x="0" y="0" width="3600" height="10" opacity="1" fill="#666666" stroke="none"/>
<rect x="0" y="3590" width="3600" height="10" opacity="1" fill="#666666" stroke="none"/>
<rect x="0" y="0" width="10" height="3600" opacity="1" fill="#666666" stroke="none"/>
<rect x="3590" y="0" width="10" height="3600" opacity="1" fill="#666666" stroke="none"/>
</svg>
