tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__plot3d__field_plots__array_plot_color_directives.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"ArrayPlot[{{1, 0, 0, Pink}, {1, 1, 0, Pink}, {1, 0, 1, Red}}]\")"
---
<svg width="360" height="270" viewBox="0 0 3600 2700" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<rect x="0" y="0" width="3600" height="2700" opacity="1" fill="#FFFFFF" stroke="none"/>
<rect x="0" y="0" width="900" height="900" opacity="1" fill="#000000" stroke="none"/>
<rect x="900" y="0" width="900" height="900" opacity="1" fill="#FFFFFF" stroke="none"/>
<rect x="1800" y="0" width="900" height="900" opacity="1" fill="#FFFFFF" stroke="none"/>
<rect x="2700" y="0" width="900" height="900" opacity="1" fill="#FF8080" stroke="none"/>
<rect x="0" y="900" width="900" height="900" opacity="1" fill="#000000" stroke="none"/>
<rect x="900" y="900" width="900" height="900" opacity="1" fill="#000000" stroke="none"/>
<rect x="1800" y="900" width="900" height="900" opacity="1" fill="#FFFFFF" stroke="none"/>
<rect x="2700" y="900" width="900" height="900" opacity="1" fill="#FF8080" stroke="none"/>
<rect x="0" y="1800" width="900" height="900" opacity="1" fill="#000000" stroke="none"/>
<rect x="900" y="1800" width="900" height="900" opacity="1" fill="#FFFFFF" stroke="none"/>
<rect x="1800" y="1800" width="900" height="900" opacity="1" fill="#000000" stroke="none"/>
<rect x="2700" y="1800" width="900" height="900" opacity="1" fill="#FF0000" stroke="none"/>
<rect x="0" y="0" width="3600" height="10" opacity="1" fill="#666666" stroke="none"/>
<rect x="0" y="2690" width="3600" height="10" opacity="1" fill="#666666" stroke="none"/>
<rect x="0" y="0" width="10" height="2700" opacity="1" fill="#666666" stroke="none"/>
<rect x="3590" y="0" width="10" height="2700" opacity="1" fill="#666666" stroke="none"/>
</svg>
