tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__plot3d__field_plots__list_density_plot_matrix.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"ListDensityPlot[{{1, 1, 1, 1}, {1, 2, 1, 2}, {1, 1, 3, 1}, {1, 2, 1, 4}}]\")"
---
<svg width="360" height="360" viewBox="0 0 3600 3600" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<rect x="0" y="0" width="3600" height="3600" opacity="1" fill="#FFFFFF" stroke="none"/>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="749,100 749,3099 "/>
<text x="670" y="3099" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">
1
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,3099 749,3099 "/>
<text x="670" y="2900" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,2900 749,2900 "/>
<text x="670" y="2700" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,2700 749,2700 "/>
<text x="670" y="2500" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,2500 749,2500 "/>
<text x="670" y="2300" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,2300 749,2300 "/>
<text x="670" y="2100" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">
2
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,2100 749,2100 "/>
<text x="670" y="1900" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1900 749,1900 "/>
<text x="670" y="1700" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1700 749,1700 "/>
<text x="670" y="1500" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1500 749,1500 "/>
<text x="670" y="1300" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1300 749,1300 "/>
<text x="670" y="1100" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">
3
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1100 749,1100 "/>
<text x="670" y="900" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,900 749,900 "/>
<text x="670" y="700" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,700 749,700 "/>
<text x="670" y="500" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,500 749,500 "/>
<text x="670" y="300" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,300 749,300 "/>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="750,3100 3499,3100 "/>
<text x="750" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">
1
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="750,3100 750,3140 "/>
<text x="933" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="933,3100 933,3140 "/>
<text x="1116" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="1116,3100 1116,3140 "/>
<text x="1299" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="1299,3100 1299,3140 "/>
<text x="1483" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="1483,3100 1483,3140 "/>
<text x="1666" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">
2
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="1666,3100 1666,3140 "/>
<text x="1849" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="1849,3100 1849,3140 "/>
<text x="2032" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="2032,3100 2032,3140 "/>
<text x="2216" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="2216,3100 2216,3140 "/>
<text x="2399" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="2399,3100 2399,3140 "/>
<text x="2582" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">
3
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="2582,3100 2582,3140 "/>
<text x="2765" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="2765,3100 2765,3140 "/>
<text x="2949" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="2949,3100 2949,3140 "/>
<text x="3132" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="3132,3100 3132,3140 "/>
<text x="3315" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="3315,3100 3315,3140 "/>
<line x1="750.0" y1="3140.0" x2="750.0" y2="3170.0" stroke="#666" stroke-width="10"/>
<line x1="1666.7" y1="3140.0" x2="1666.7" y2="3170.0" stroke="#666" stroke-width="10"/>
<line x1="2583.3" y1="3140.0" x2="2583.3" y2="3170.0" stroke="#666" stroke-width="10"/>
<line x1="3500.0" y1="3140.0" x2="3500.0" y2="3170.0" stroke="#666" stroke-width="10"/>
<line x1="710.0" y1="3100.0" x2="680.0" y2="3100.0" stroke="#666" stroke-width="10"/>
<line x1="710.0" y1="2100.0" x2="680.0" y2="2100.0" stroke="#666" stroke-width="10"/>
<line x1="710.0" y1="1100.0" x2="680.0" y2="1100.0" stroke="#666" stroke-width="10"/>
<line x1="710.0" y1="100.0" x2="680.0" y2="100.0" stroke="#666" stroke-width="10"/>
<rect x="750.0" y="100.0" width="688.0" height="750.5" fill="rgb(0,0,255)" stroke="none"/>
<rect x="1437.5" y="100.0" width="688.0" height="750.5" fill="rgb(0,0,255)" stroke="none"/>
<rect x="2125.0" y="100.0" width="688.0" height="750.5" fill="rgb(0,0,255)" stroke="none"/>
<rect x="2812.5" y="100.0" width="688.0" height="750.5" fill="rgb(0,0,255)" stroke="none"/>
<rect x="750.0" y="850.0" width="688.0" height="750.5" fill="rgb(0,0,255)" stroke="none"/>
<rect x="1437.5" y="850.0" width="688.0" height="750.5" fill="rgb(170,170,255)" stroke="none"/>
<rect x="2125.0" y="850.0" width="688.0" height="750.5" fill="rgb(0,0,255)" stroke="none"/>
<rect x="2812.5" y="850.0" width="688.0" height="750.5" fill="rgb(170,170,255)" stroke="none"/>
<rect x="750.0" y="1600.0" width="688.0" height="750.5" fill="rgb(0,0,255)" stroke="none"/>
<rect x="1437.5" y="1600.0" width="688.0" height="750.5" fill="rgb(0,0,255)" stroke="none"/>
<rect x="2125.0" y="1600.0" width="688.0" height="750.5" fill="rgb(255,170,170)" stroke="none"/>
<rect x="2812.5" y="1600.0" width="688.0" height="750.5" fill="rgb(0,0,255)" stroke="none"/>
<rect x="750.0" y="2350.0" width="688.0" height="750.5" fill="rgb(0,0,255)" stroke="none"/>
<rect x="1437.5" y="2350.0" width="688.0" height="750.5" fill="rgb(170,170,255)" stroke="none"/>
<rect x="2125.0" y="2350.0" width="688.0" height="750.5" fill="rgb(0,0,255)" stroke="none"/>
<rect x="2812.5" y="2350.0" width="688.0" height="750.5" fill="rgb(255,0,0)" stroke="none"/>
</svg>
