tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__plot3d__field_plots__list_vector_plot_basic.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"ListVectorPlot[{{{0, 0}, {1, 0}}, {{1, 1}, {0, 1}}, {{-1, 1}, {-1, 0}}}]\")"
---
<svg width="360" height="360" viewBox="0 0 3600 3600" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<rect x="0" y="0" width="3600" height="3600" opacity="1" fill="#FFFFFF" stroke="none"/>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="749,100 749,3099 "/>
<text x="670" y="3099" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">
0.0
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,3099 749,3099 "/>
<text x="670" y="2950" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,2950 749,2950 "/>
<text x="670" y="2800" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,2800 749,2800 "/>
<text x="670" y="2650" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,2650 749,2650 "/>
<text x="670" y="2500" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">
0.2
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,2500 749,2500 "/>
<text x="670" y="2350" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,2350 749,2350 "/>
<text x="670" y="2200" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,2200 749,2200 "/>
<text x="670" y="2050" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,2050 749,2050 "/>
<text x="670" y="1900" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">
0.4
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1900 749,1900 "/>
<text x="670" y="1750" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1750 749,1750 "/>
<text x="670" y="1600" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1600 749,1600 "/>
<text x="670" y="1450" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1450 749,1450 "/>
<text x="670" y="1300" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">
0.6
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1300 749,1300 "/>
<text x="670" y="1150" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1150 749,1150 "/>
<text x="670" y="1000" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1000 749,1000 "/>
<text x="670" y="850" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,850 749,850 "/>
<text x="670" y="700" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">
0.8
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,700 749,700 "/>
<text x="670" y="550" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,550 749,550 "/>
<text x="670" y="400" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,400 749,400 "/>
<text x="670" y="250" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,250 749,250 "/>
<text x="670" y="100" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">
1.0
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,100 749,100 "/>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="750,3100 3499,3100 "/>
<text x="750" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">
-1.0
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="750,3100 750,3140 "/>
<text x="887" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="887,3100 887,3140 "/>
<text x="1024" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="1024,3100 1024,3140 "/>
<text x="1162" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="1162,3100 1162,3140 "/>
<text x="1299" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="1299,3100 1299,3140 "/>
<text x="1437" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">
-0.5
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="1437,3100 1437,3140 "/>
<text x="1574" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="1574,3100 1574,3140 "/>
<text x="1712" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="1712,3100 1712,3140 "/>
<text x="1849" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="1849,3100 1849,3140 "/>
<text x="1987" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="1987,3100 1987,3140 "/>
<text x="2124" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">
0.0
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="2124,3100 2124,3140 "/>
<text x="2261" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="2261,3100 2261,3140 "/>
<text x="2399" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="2399,3100 2399,3140 "/>
<text x="2536" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="2536,3100 2536,3140 "/>
<text x="2674" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="2674,3100 2674,3140 "/>
<text x="2811" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">
0.5
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="2811,3100 2811,3140 "/>
<text x="2949" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="2949,3100 2949,3140 "/>
<text x="3086" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="3086,3100 3086,3140 "/>
<text x="3224" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="3224,3100 3224,3140 "/>
<text x="3361" y="3180" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="3361,3100 3361,3140 "/>
<line x1="750.0" y1="3140.0" x2="750.0" y2="3170.0" stroke="#666" stroke-width="10"/>
<line x1="1437.5" y1="3140.0" x2="1437.5" y2="3170.0" stroke="#666" stroke-width="10"/>
<line x1="2125.0" y1="3140.0" x2="2125.0" y2="3170.0" stroke="#666" stroke-width="10"/>
<line x1="2812.5" y1="3140.0" x2="2812.5" y2="3170.0" stroke="#666" stroke-width="10"/>
<line x1="3500.0" y1="3140.0" x2="3500.0" y2="3170.0" stroke="#666" stroke-width="10"/>
<line x1="710.0" y1="3100.0" x2="680.0" y2="3100.0" stroke="#666" stroke-width="10"/>
<line x1="710.0" y1="2500.0" x2="680.0" y2="2500.0" stroke="#666" stroke-width="10"/>
<line x1="710.0" y1="1900.0" x2="680.0" y2="1900.0" stroke="#666" stroke-width="10"/>
<line x1="710.0" y1="1300.0" x2="680.0" y2="1300.0" stroke="#666" stroke-width="10"/>
<line x1="710.0" y1="700.0" x2="680.0" y2="700.0" stroke="#666" stroke-width="10"/>
<line x1="710.0" y1="100.0" x2="680.0" y2="100.0" stroke="#666" stroke-width="10"/>
<text x="3500.0" y="3180.0" dy="0.76em" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">1.0</text>
<line x1="2125.0" y1="3100.0" x2="2788.3" y2="3100.0" stroke="rgb(250,50,100)" stroke-width="5.4"/>
<polygon points="2788.3,3100.0 2589.3,3179.6 2589.3,3020.4" fill="rgb(250,50,100)"/>
<line x1="3500.0" y1="100.0" x2="3500.0" y2="-563.3" stroke="rgb(250,50,100)" stroke-width="5.4"/>
<polygon points="3500.0,-563.3 3579.6,-364.3 3420.4,-364.3" fill="rgb(250,50,100)"/>
<line x1="750.0" y1="100.0" x2="86.7" y2="100.0" stroke="rgb(250,50,100)" stroke-width="5.4"/>
<polygon points="86.7,100.0 285.7,20.4 285.7,179.6" fill="rgb(250,50,100)"/>
</svg>
