tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__plot3d__field_plots__matrix_plot_basic.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"MatrixPlot[{{1, 2, 3}, {4, 5, 6}, {7, 8, 9}}]\")"
---
<svg width="360" height="360" viewBox="0 0 360 360" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<rect width="360" height="360" fill="rgb(255,255,255)"/>
<rect x="0.0" y="0.0" width="120.5" height="120.5" fill="rgb(0,0,255)" stroke="none"/>
<rect x="120.0" y="0.0" width="120.5" height="120.5" fill="rgb(63,63,255)" stroke="none"/>
<rect x="240.0" y="0.0" width="120.5" height="120.5" fill="rgb(127,127,255)" stroke="none"/>
<rect x="0.0" y="120.0" width="120.5" height="120.5" fill="rgb(191,191,255)" stroke="none"/>
<rect x="120.0" y="120.0" width="120.5" height="120.5" fill="rgb(255,255,255)" stroke="none"/>
<rect x="240.0" y="120.0" width="120.5" height="120.5" fill="rgb(255,191,191)" stroke="none"/>
<rect x="0.0" y="240.0" width="120.5" height="120.5" fill="rgb(255,127,127)" stroke="none"/>
<rect x="120.0" y="240.0" width="120.5" height="120.5" fill="rgb(255,63,63)" stroke="none"/>
<rect x="240.0" y="240.0" width="120.5" height="120.5" fill="rgb(255,0,0)" stroke="none"/>
</svg>
